# Business_AIProtector

./: .env.example  .gitignore  .trivyignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  openclaw-agent.dev.toml
.claude/agents/: community-governance.md  detection-engineering.md  devops-infrastructure.md  endpoint-engineering.md  platform-engineering.md  product-manager.md  program-manager.md  quality-assurance.md  security-architect.md  threat-intelligence.md  user-experience.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  detection_rule.yml  feature_request.yml  security_disclosure.yml
.github/workflows/: ci.yml  codeql.yml
agent/: Cargo.toml
agent/.cargo/: config.toml
agent/benches/: detection_engine.rs  event_throughput.rs  ioc_lookup.rs
agent/src/: config.rs  lib.rs  main.rs
agent/src/assistant/: claude_client.rs  coaching.rs  fallback_templates.rs  mod.rs
agent/src/collectors/: auth.rs  filesystem.rs  integrity.rs  mod.rs  network.rs  persistence.rs  process.rs
agent/src/containment/: actions.rs  file_quarantine.rs  isolation.rs  mod.rs  network_block.rs  persistence_disable.rs  process_kill.rs
agent/src/core/: event_bus.rs  metrics.rs  mod.rs  ring_buffer.rs  scheduler.rs  state.rs
agent/src/detection/: correlation.rs  engine.rs  heuristics.rs  ioc_store.rs  mitre.rs  mod.rs  rule_loader.rs
agent/src/platform_connector/: alert_uploader.rs  cert_renewal.rs  client.rs  enrollment.rs  heartbeat.rs  intel_receiver.rs  mod.rs  policy_sync.rs  telemetry_uploader.rs  updater.rs
agent/src/voice/: stt.rs  tts.rs
console/: next.config.js  package.json  tailwind.config.js
console/src/app/: globals.css  layout.tsx  page.tsx
console/src/app/agents/: page.tsx
console/src/app/audit/: page.tsx
console/src/app/incidents/: page.tsx
console/src/app/incidents/[id]/: page.tsx
console/src/app/intel/: page.tsx
console/src/app/policies/: page.tsx
console/src/components/: SeverityBadge.tsx  Sidebar.tsx  StatusBadge.tsx
console/src/lib/: api.ts  providers.tsx
docs/team/: README.md  collaboration-workflow.md
intelligence/rule-packs/openclaw-core-v1/: pack.toml
intelligence/rule-packs/openclaw-core-v1/rules/collection/: T1005-T1074-T1056-data-collection.toml
intelligence/rule-packs/openclaw-core-v1/rules/command_and_control/: T1071-web-c2.toml
intelligence/rule-packs/openclaw-core-v1/rules/credential_access/: T1003-lsass.toml  T1110-brute-force-thr.toml  T1110-brute-force.toml
intelligence/rule-packs/openclaw-core-v1/rules/defense_evasion/: T1036-masquerading.toml  T1562-impair-defenses.toml
platform/api/: Dockerfile.dev  command_queue.py  database.py  incident_service.py  main.py  pki.py  requirements-dev.txt  requirements.txt
platform/api/alembic/: alembic.ini  env.py
platform/api/alembic/versions/: 0001_baseline.py  0002_enrollment_tokens.py  0003_global_ioc_entries.py  0004_policy_rule_overrides.py
platform/api/intel/: __init__.py  abuseipdb.py  cisa_kev.py  feed_registry.py  feed_runner.py  malwarebazaar.py  otx.py  scoring.py  urlhaus.py
platform/api/middleware/: rbac.py  tenant.py
platform/api/models/: __init__.py  agent.py  audit_log.py  enrollment_token.py  global_ioc.py  incident.py  intel.py  policy.py  tenant.py
platform/api/routes/: admin.py  agents.py  audit.py  cert_renewal.py  enrollment.py  heartbeat.py  incidents.py  intel.py  policies.py  telemetry.py
platform/api/tests/: test_e2e_detection.py  test_e2e_feed_sync.py  test_e2e_isolation.py  test_enrollment.py  test_pki.py
platform/api/tests/isolation/: test_tenant_isolation.py
platform/console/: Dockerfile.dev  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
platform/console/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
platform/console/src/components/: NavSidebar.tsx
platform/console/src/lib/: api.ts
platform/console/src/types/: index.ts
platform/deployment/keycloak/realms/: openclaw-agents-realm.json  openclaw-platform-realm.json
platform/deployment/postgres/: init.sql
scripts/: dev_seed.py
sdk/integration-sdk/: README.md
sdk/rule-development-kit/: README.md  validate.py
(+21 files in other folders)
